# Enibar

./: .flake8  .gitignore  .gitlab-ci.yml  COPYING  Cargo.toml  README.md  agio.sh  db.sql  mail.sh  migrations.py  requirements-test.txt  requirements.txt  run.sh  template.py  update.sh
application/: __init__.py  agio.py  database.py  mail.py  main.py  photo_sync.py  products.py  settings.py  setup.py  users.py  utils.py
application/api/: base.py  categories.py  mail.py  note_categories.py  notes.py  panels.py  prices.py  products.py  redis.py  sde.py  soundsystem.py  stats.py  transactions.py  users.py  validator.py
application/gui/: __init__.py  about_window.py  add_note.py  adding_barcode_window.py  admin_stats_window.py  auth_prompt.py  auth_prompt_window.py  consumptionmanagment.py  csv_import_window.py  douchette.py  douchette_window.py  empty_note_window.py  emptynote.py  filtered_notes_list_widget.py  group_actions_window.py  help_window.py  history_window.py  input.py  input_widget.py  load_mail_model_window.py  mail_message_input_widget.py  mail_scheduler_window.py  mail_selector_window.py  mail_widget.py  main_window.py  mainwindow.py  manage_notes.py  note_categories_management_window.py  notes_list_widget.py  notes_management_window.py  notesaction.py  panel_widget.py  panelmanagment.py  panels.py  panels_management_window.py  password_management_window.py  passwordmanagment.py  products_management_window.py  refill_note_window.py  refillnote.py  (+13 more)
application/rapi/: Cargo.toml
application/rapi/rapi/: Cargo.toml
application/rapi/rapi/src/: diesel_helpers.rs  errors.rs  lib.rs  model.rs  py_helpers.rs  schema.rs  validators.rs
application/rapi/rapi/src/categories/: mod.rs  models.rs  py.rs
application/rapi/rapi/src/note_categories/: diesel_impls.rs  mod.rs  models.rs  py.rs
application/rapi/rapi/src/notes/: mod.rs  models.rs  py.rs
application/rapi/rapi/src/panels/: diesel_impls.rs  mod.rs  models.rs  py.rs
application/rapi/rapi/src/products/: mod.rs  models.rs  py.rs
application/rapi/rapi/src/schema/: generated.rs  mod.rs  views.rs
application/rapi/rapi/src/tests/: categories.rs  mod.rs  note_categories.rs  panels.rs  schema.rs  users.rs
application/rapi/rapi/src/users/: mod.rs  models.rs  py.rs
application/rapi/rapi/src/utils/: mod.rs
application/rapi/rapi_codegen/: Cargo.toml
application/rapi/rapi_codegen/src/: lib.rs  model.rs  util.rs
application/rapi/rapi_py/: Cargo.toml
application/rapi/rapi_py/src/: lib.rs
application/rapi/src/: errors.rs  lib.rs  model.rs  schema.rs
application/rapi/src/admins/: mod.rs
application/rapi/src/categories/: mod.rs  models.rs  py.rs
application/rapi/src/gui/: mod.rs  password_prompt.rs  utils.rs
application/rapi/src/gui/ui/: password_prompt.glade
application/rapi/src/notes/: mod.rs  models.rs  py.rs
application/rapi/src/tests/: categories.rs  mod.rs  schema.rs  users.rs
application/rapi/src/users/: mod.rs  models.rs  py.rs
application/rapi/src/utils/: mod.rs
application/rgui/: Cargo.toml
application/rgui/src/: lib.rs
application/rgui/src/tests/: auth_window.rs  mod.rs
application/rgui/src/widgets/: text_input.rs
application/rgui/src/windows/: auth_window.rs  mod.rs
application/ui/: about_window.ui  addnote.ui  admin_stats_window.ui  ask_douchette_window.ui  auth_prompt_window.ui  authprompt.ui  barcode_adding_window.ui  consumptionmanagment.ui  csv_import_window.ui  douchette_window.ui  filtered_notes_list_widget.ui  group_actions_window.ui  help_window.ui  history.ui  history_export_window.ui  history_window.ui  load_mail_model_window.ui  mail_scheduler_window.ui  mail_selector_window.ui  main_window.ui  mainwindow.ui  manage_notes.ui  note_categories_management_window.ui  panel.ui  (+22 more)
documentation/: Makefile
migrations/: betterhistory.sql  migration_agios_inscription.sql  migration_barcode.sql  migration_checkboxes.sql  migration_cotiz.sql  migration_decimal.sql  migration_default_barcode.sql  migration_delete_barcodes.sql  migration_hide_panels.sql  migration_indexes.sql  migration_mail.sql  migration_multiple_barcodes_product.sql  migration_note_categories.sql  migration_note_following_in_history.sql  migration_notnull.sql  migration_percentage.sql  migration_percentage_quantity_history.sql  migration_protected_note_categories.sql  migration_quantity.sql  migration_quiwy.sql
test/: basetest.py  test.sh  test_api_categories.py  test_api_mail.py  test_api_note_categories.py  test_api_notes.py  test_api_panels.py  test_api_prices.py  test_api_products.py  test_api_redis.py  test_api_sde.py  test_api_stats.py  test_api_transactions.py  test_api_users.py  test_categories.py  test_database.py  test_gui_auth_window.py  test_gui_change_password.py  test_gui_csv_import.py  test_gui_douchette.py  test_gui_empty_note.py  test_gui_history.py  test_gui_mail.py  test_gui_mail_scheduler.py  test_gui_menu.py  test_gui_note_categories_management_window.py  test_gui_notes_management_window.py  test_gui_panels_management_window.py  test_gui_products_management.py  test_gui_refill_note.py  test_gui_search.py  test_gui_settings.py  test_gui_user_managment.py  test_notes.py  test_panel.py  test_prices.py  test_products.py  test_settings.py  test_stats.py  test_transactions.py  (+2 more)
tests/: basetest.py  requirements-test.txt  test.sh  test_api_categories.py  test_api_mail.py  test_api_note_categories.py  test_api_notes.py  test_api_panels.py  test_api_prices.py  test_api_products.py  test_api_redis.py  test_api_sde.py  test_api_stats.py  test_api_transactions.py  test_api_users.py  test_database.py  test_gui_auth_window.py  test_gui_change_password.py  test_gui_csv_import.py  test_gui_empty_note.py  test_gui_history.py  test_gui_mail.py  test_gui_mail_scheduler.py  test_gui_menu.py  test_gui_note_categories_management_window.py  test_gui_notes_management_window.py  test_gui_panels_management_window.py  test_gui_products_management.py  test_gui_refill_note.py  test_gui_search.py  test_gui_settings.py  test_gui_user_managment.py  test_settings.py
utils/: migrate_to_postgres.sh  send_all_sde.py
(+40 files in other folders)
