[workspace]
members = [
    "application/rapi/rapi",
    "application/rapi/rapi_codegen"
]

[profile.release]
lto = true
codegen-units = 1


[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel.git", features = ["32-columns-tables", "unstable"] }
diesel_derives = { git = "https://github.com/diesel-rs/diesel.git", features = ["unstable"] }
