[workspace]
members = [
    "application/rapi/rapi",
    "application/rapi/rapi_codegen",
    "application/rapi/rapi_py",
    "application/rgui"
]

[profile.release]
lto = true
codegen-units = 1


[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel.git", features = ["32-columns-tables", "unstable"] }
diesel_derives = { git = "https://github.com/diesel-rs/diesel.git", features = ["unstable"] }
relm-test = { git = "https://github.com/antoyo/relm/" }
relm-core = { git = "https://github.com/antoyo/relm/" }
relm = { git = "https://github.com/antoyo/relm/" }
relm-gen-widget = { git = "https://github.com/antoyo/relm/" }
