[package]
name = "rapi"
version = "0.1.0"
authors = ["Eijebong <eijebong@bananium.fr>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cpython={ git="https://github.com/dgrunwald/rust-cpython.git" }
x11 = { version="2.12.1", features=["xlib"] }
chrono = "0.3"
diesel = { version = "0.11", features=["chrono"] }
diesel_codegen = { version = "0.11", features=["postgres"] }
dotenv = "*"
r2d2 = "0.7"
r2d2-diesel = "0.11"
lazy_static = "*"
gtk = { git="https://github.com/gtk-rs/gtk.git", features=["v3_20"] }
gdk = { git="https://github.com/gtk-rs/gdk.git", features=["v3_20"] }
bcrypt = "*"
