[package]
name = "rapi"
version = "0.1.0"
authors = ["Eijebong <eijebong@bananium.fr>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cpython={ git="https://github.com/dgrunwald/rust-cpython.git", features=["python3-sys"] }
x11 = { version="2.15", features=["xlib"] }
diesel = { version = "0.16", features = ["postgres", "chrono", "numeric", "large-tables"] }
diesel_codegen = { version = "0.16", features = ["postgres"] }
r2d2 = "0.7"
r2d2-diesel = "0.16"
lazy_static = "0.2"
dotenv = "0.10"
bcrypt = "0.1"
error-chain = "0.10"
redis = "0.8"
chrono = "0.4"
bigdecimal = "0.0.10"
