[package]
name = "rgui"
version = "0.1.0"
authors = ["Bastien Orivel <eijebong@bananium.fr>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
relm = { version = "0.14", features = ["nightly", "unstable"] }
relm-derive = { version = "0.14", features = ["unstable"] }
relm-attributes = { version = "0.14", features = ["unstable"] }
relm-gen-widget = { version = "0.14", features = ["unstable"] }
relm-test = "0.14"
gtk = "0.4"
gdk = "0.8"
rapi = { path = "../rapi/rapi" }
