[package]
name = "rapi"
version = "0.1.0"
authors = ["Eijebong <eijebong@bananium.fr>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cpython={ git="https://github.com/dgrunwald/rust-cpython.git", features=["python3-sys"] }
x11 = { version="2.15", features=["xlib"] }
diesel = { version = "0.16", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.16", default-features=false, features = ["postgres"] }
r2d2 = "0.7"
r2d2-diesel = "0.16"
lazy_static = "0.2"
bcrypt = "0.1"
error-chain = "0.11"
redis = "0.8"
rapi_codegen = { path = "../rapi_codegen" }
validator = "0.6"
validator_derive = "0.6"

