[package]
name = "rapi"
version = "0.1.0"
authors = ["Eijebong <eijebong@bananium.fr>"]

[dependencies]
cpython={ git="https://github.com/dgrunwald/rust-cpython.git", features=["python3-sys"] }
x11 = { version="2.15", features=["xlib"] }
diesel = { version = "1", features = ["postgres", "chrono", "numeric", "r2d2"] }
lazy_static = "1"
bcrypt = "0.2"
error-chain = "0.11"
redis = "0.8"
rapi_codegen = { path = "../rapi_codegen" }
validator = "0.6"
validator_derive = "0.6"
bigdecimal = "0.0.11"
num-traits = "0.2"
chrono = "0.4"
byteorder = "1"

[features]
test = []
